--- a/test/libArrayToolbox/Makefile.in
+++ b/test/libArrayToolbox/Makefile.in
@@ -484,6 +484,11 @@ QT4_LIBS = @QT4_LIBS@
 QT4_MOC = @QT4_MOC@
 QT4_RCC = @QT4_RCC@
 QT4_UIC = @QT4_UIC@
+QT5_CFLAGS = @QT5_CFLAGS@
+QT5_LIBS = @QT5_LIBS@
+QT5_MOC = @QT5_MOC@
+QT5_RCC = @QT5_RCC@
+QT5_UIC = @QT5_UIC@
 RANLIB = @RANLIB@
 SED = @SED@
 SET_MAKE = @SET_MAKE@
