--- a/src/tools/attachIRoCS/Makefile.am
+++ b/src/tools/attachIRoCS/Makefile.am
@@ -1,7 +1,7 @@
 bin_PROGRAMS = attachIRoCS
 
 AM_CPPFLAGS = -I$(top_srcdir)/src $(BLITZ_CFLAGS) $(HDF5_CFLAGS) \
-	$(FFTW_CFLAGS) $(GSL_CFLAGS) $(OPENCV_CFLAGS)
+	$(HDF5_CPP_CFLAGS) $(FFTW_CFLAGS) $(GSL_CFLAGS) $(OPENCV_CFLAGS)
 AM_CXXFLAGS = -Wno-long-long
 
 attachIRoCS_LDADD = \
@@ -17,9 +17,9 @@ attachIRoCS_LDADD = \
 
 if STATIC_TOOLS
 attachIRoCS_LDFLAGS = -all-static
-attachIRoCS_LDADD += $(HDF5_STATIC_LIBS)
+attachIRoCS_LDADD += $(HDF5_CPP_STATIC_LIBS) $(HDF5_STATIC_LIBS)
 else
-attachIRoCS_LDADD += $(HDF5_LIBS)
+attachIRoCS_LDADD += $(HDF5_CPP_LIBS) $(HDF5_LIBS)
 endif
 
 attachIRoCS_SOURCES = attachIRoCS.cc
