--- a/src/tools/attachIRoCSToCellSegmentation/Makefile.am
+++ b/src/tools/attachIRoCSToCellSegmentation/Makefile.am
@@ -1,7 +1,7 @@
 bin_PROGRAMS = attachIRoCSToCellSegmentation
 
 AM_CPPFLAGS = -I$(top_srcdir)/src $(BLITZ_CFLAGS) $(HDF5_CFLAGS) \
-	$(FFTW_CFLAGS) $(GSL_CFLAGS) $(OPENCV_CFLAGS)
+	$(HDF5_CPP_CFLAGS) $(FFTW_CFLAGS) $(GSL_CFLAGS) $(OPENCV_CFLAGS)
 AM_CXXFLAGS = -Wno-long-long
 
 attachIRoCSToCellSegmentation_LDADD = \
@@ -18,11 +18,11 @@ attachIRoCSToCellSegmentation_LDADD = \
 if STATIC_TOOLS
 attachIRoCSToCellSegmentation_LDFLAGS = -all-static
 attachIRoCSToCellSegmentation_LDADD += \
-	$(HDF5_STATIC_LIBS) \
+	$(HDF5_CPP_STATIC_LIBS) $(HDF5_STATIC_LIBS) \
 	$(OPENCV_STATIC_LIBS)
 else
 attachIRoCSToCellSegmentation_LDADD += \
-	$(HDF5_LIBS) \
+	$(HDF5_CPP_LIBS) $(HDF5_LIBS) \
 	$(OPENCV_LIBS)
 endif
 
