--- a/src/tools/trainLayerAssignmentForSegmentation/Makefile.in
+++ b/src/tools/trainLayerAssignmentForSegmentation/Makefile.in
@@ -79,8 +79,10 @@ POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
 bin_PROGRAMS = trainLayerAssignmentForSegmentation$(EXEEXT)
-@STATIC_TOOLS_TRUE@am__append_1 = $(HDF5_STATIC_LIBS)
-@STATIC_TOOLS_FALSE@am__append_2 = $(HDF5_LIBS)
+@STATIC_TOOLS_TRUE@am__append_1 = \
+@STATIC_TOOLS_TRUE@	$(HDF5_CPP_STATIC_LIBS) $(HDF5_STATIC_LIBS)
+
+@STATIC_TOOLS_FALSE@am__append_2 = $(HDF5_CPP_LIBS) $(HDF5_LIBS)
 subdir = src/tools/trainLayerAssignmentForSegmentation
 DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/Makefile.am \
 	$(top_srcdir)/depcomp
@@ -99,8 +101,10 @@ am_trainLayerAssignmentForSegmentation_OBJECTS =  \
 trainLayerAssignmentForSegmentation_OBJECTS =  \
 	$(am_trainLayerAssignmentForSegmentation_OBJECTS)
 am__DEPENDENCIES_1 =
-@STATIC_TOOLS_TRUE@am__DEPENDENCIES_2 = $(am__DEPENDENCIES_1)
-@STATIC_TOOLS_FALSE@am__DEPENDENCIES_3 = $(am__DEPENDENCIES_1)
+@STATIC_TOOLS_TRUE@am__DEPENDENCIES_2 = $(am__DEPENDENCIES_1) \
+@STATIC_TOOLS_TRUE@	$(am__DEPENDENCIES_1)
+@STATIC_TOOLS_FALSE@am__DEPENDENCIES_3 = $(am__DEPENDENCIES_1) \
+@STATIC_TOOLS_FALSE@	$(am__DEPENDENCIES_1)
 trainLayerAssignmentForSegmentation_DEPENDENCIES =  \
 	$(top_builddir)/src/libIRoCS/libIRoCS.la \
 	$(top_builddir)/src/libsegmentation/libsegmentation.la \
@@ -230,6 +234,10 @@ GSL_LIBS = @GSL_LIBS@
 GSL_STATIC_CFLAGS = @GSL_STATIC_CFLAGS@
 GSL_STATIC_LIBS = @GSL_STATIC_LIBS@
 HDF5_CFLAGS = @HDF5_CFLAGS@
+HDF5_CPP_CFLAGS = @HDF5_CPP_CFLAGS@
+HDF5_CPP_LIBS = @HDF5_CPP_LIBS@
+HDF5_CPP_STATIC_CFLAGS = @HDF5_CPP_STATIC_CFLAGS@
+HDF5_CPP_STATIC_LIBS = @HDF5_CPP_STATIC_LIBS@
 HDF5_LIBS = @HDF5_LIBS@
 HDF5_STATIC_CFLAGS = @HDF5_STATIC_CFLAGS@
 HDF5_STATIC_LIBS = @HDF5_STATIC_LIBS@
@@ -354,7 +362,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AM_CPPFLAGS = -I$(top_srcdir)/src $(BLITZ_CFLAGS) $(HDF5_CFLAGS) \
-	$(FFTW_CFLAGS) $(GSL_CFLAGS) $(OPENCV_CFLAGS)
+	$(HDF5_CPP_CFLAGS) $(FFTW_CFLAGS) $(GSL_CFLAGS) $(OPENCV_CFLAGS)
 
 AM_CXXFLAGS = -Wno-long-long
 trainLayerAssignmentForSegmentation_LDADD =  \
