--- a/src/libsvmtl/Makefile.in
+++ b/src/libsvmtl/Makefile.in
@@ -242,6 +242,10 @@ GSL_LIBS = @GSL_LIBS@
 GSL_STATIC_CFLAGS = @GSL_STATIC_CFLAGS@
 GSL_STATIC_LIBS = @GSL_STATIC_LIBS@
 HDF5_CFLAGS = @HDF5_CFLAGS@
+HDF5_CPP_CFLAGS = @HDF5_CPP_CFLAGS@
+HDF5_CPP_LIBS = @HDF5_CPP_LIBS@
+HDF5_CPP_STATIC_CFLAGS = @HDF5_CPP_STATIC_CFLAGS@
+HDF5_CPP_STATIC_LIBS = @HDF5_CPP_STATIC_LIBS@
 HDF5_LIBS = @HDF5_LIBS@
 HDF5_STATIC_CFLAGS = @HDF5_STATIC_CFLAGS@
 HDF5_STATIC_LIBS = @HDF5_STATIC_LIBS@
