--- a/src/plugins/TrainLayerAssignment/Makefile.in
+++ b/src/plugins/TrainLayerAssignment/Makefile.in
@@ -136,7 +136,8 @@ libPluginTrainLayerAssignment_la_DEPENDENCIES =  \
 	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
 	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
 	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
-	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1)
+	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
+	$(am__DEPENDENCIES_1)
 am_libPluginTrainLayerAssignment_la_OBJECTS =  \
 	TrainLayerAssignmentTrainfileParametersItem.lo \
 	TrainLayerAssignmentParametersDialog.lo \
@@ -264,6 +265,10 @@ GSL_LIBS = @GSL_LIBS@
 GSL_STATIC_CFLAGS = @GSL_STATIC_CFLAGS@
 GSL_STATIC_LIBS = @GSL_STATIC_LIBS@
 HDF5_CFLAGS = @HDF5_CFLAGS@
+HDF5_CPP_CFLAGS = @HDF5_CPP_CFLAGS@
+HDF5_CPP_LIBS = @HDF5_CPP_LIBS@
+HDF5_CPP_STATIC_CFLAGS = @HDF5_CPP_STATIC_CFLAGS@
+HDF5_CPP_STATIC_LIBS = @HDF5_CPP_STATIC_LIBS@
 HDF5_LIBS = @HDF5_LIBS@
 HDF5_STATIC_CFLAGS = @HDF5_STATIC_CFLAGS@
 HDF5_STATIC_LIBS = @HDF5_STATIC_LIBS@
@@ -391,7 +396,8 @@ lblplugindir = $(pkgdatadir)/plugins
 lblplugin_LTLIBRARIES = libPluginTrainLayerAssignment.la
 MOC = @QT4_MOC@
 AM_CPPFLAGS = -I$(top_srcdir)/src $(BLITZ_CFLAGS) $(HDF5_CFLAGS) \
-	$(FFTW_CFLAGS) $(GSL_CFLAGS) $(OPENCV_CFLAGS) $(QT4_CFLAGS)
+	$(HDF5_CPP_CFLAGS) $(FFTW_CFLAGS) $(GSL_CFLAGS) $(OPENCV_CFLAGS) \
+	$(QT4_CFLAGS)
 
 AM_CXXFLAGS = -Wno-long-long
 AM_LDFLAGS = -no-undefined -version-info 1:0:0
@@ -410,8 +416,8 @@ libPluginTrainLayerAssignment_la_LIBADD = \
 	$(top_builddir)/src/libProgressReporter_qt4/libProgressReporter_qt4.la \
 	$(top_builddir)/src/libProgressReporter/libProgressReporter.la \
 	$(top_builddir)/src/libcmdline/libcmdline.la \
-	$(BLITZ_LIBS) $(HDF5_LIBS) $(FFTW_LIBS) $(GSL_LIBS) $(OPENCV_LIBS) \
-	$(QT4_LIBS) $(GL_LIBS) $(GLU_LIBS)
+	$(BLITZ_LIBS) $(HDF5_CPP_LIBS) $(HDF5_LIBS) $(FFTW_LIBS) $(GSL_LIBS) \
+	$(OPENCV_LIBS) $(QT4_LIBS) $(GL_LIBS) $(GLU_LIBS)
 
 noinst_HEADERS = \
 	TrainLayerAssignmentTrainfileParametersItem.hh \
