--- a/src/tools/assignLayersToSegmentation/Makefile.am
+++ b/src/tools/assignLayersToSegmentation/Makefile.am
@@ -1,7 +1,7 @@
 bin_PROGRAMS = assignLayersToSegmentation
 
 AM_CPPFLAGS = -I$(top_srcdir)/src $(BLITZ_CFLAGS) $(HDF5_CFLAGS) \
-	$(FFTW_CFLAGS) $(GSL_CFLAGS) $(OPENCV_CFLAGS)
+	$(HDF5_CPP_CFLAGS) $(FFTW_CFLAGS) $(GSL_CFLAGS) $(OPENCV_CFLAGS)
 AM_CXXFLAGS = -Wno-long-long
 
 assignLayersToSegmentation_LDADD = \
@@ -17,9 +17,9 @@ assignLayersToSegmentation_LDADD = \
 
 if STATIC_TOOLS
 assignLayersToSegmentation_LDFLAGS = -all-static
-assignLayersToSegmentation_LDADD += $(HDF5_STATIC_LIBS)
+assignLayersToSegmentation_LDADD += $(HDF5_CPP_STATIC_LIBS) $(HDF5_STATIC_LIBS)
 else
-assignLayersToSegmentation_LDADD += $(HDF5_LIBS)
+assignLayersToSegmentation_LDADD += $(HDF5_CPP_LIBS) $(HDF5_LIBS)
 endif
 
 assignLayersToSegmentation_SOURCES = assignLayersToSegmentation.cc
