--- a/src/tools/labelEpidermis/Makefile.am
+++ b/src/tools/labelEpidermis/Makefile.am
@@ -1,7 +1,7 @@
 bin_PROGRAMS = labelEpidermis
 
 AM_CPPFLAGS = -I$(top_srcdir)/src $(BLITZ_CFLAGS) $(HDF5_CFLAGS) \
-	$(FFTW_CFLAGS) $(GSL_CFLAGS) $(OPENCV_CFLAGS)
+	$(HDF5_CPP_CFLAGS) $(FFTW_CFLAGS) $(GSL_CFLAGS) $(OPENCV_CFLAGS)
 AM_CXXFLAGS = -Wno-long-long
 
 labelEpidermis_LDADD = $(top_builddir)/src/libIRoCS/libIRoCS.la \
@@ -16,9 +16,9 @@ labelEpidermis_LDADD = $(top_builddir)/src/libIRoCS/libIRoCS.la \
 
 if STATIC_TOOLS
 labelEpidermis_LDFLAGS = -all-static
-labelEpidermis_LDADD += $(HDF5_STATIC_LIBS)
+labelEpidermis_LDADD += $(HDF5_CPP_STATIC_LIBS) $(HDF5_STATIC_LIBS)
 else
-labelEpidermis_LDADD += $(HDF5_LIBS)
+labelEpidermis_LDADD += $(HDF5_CPP_LIBS) $(HDF5_LIBS)
 endif
 
 labelEpidermis_SOURCES = labelEpidermis.cc
