libBlitzHdf5 reading of variable length strings
- Reading of variable length string attributes
  in simple (1D) dataspaces with one entry and
  scalar dataspaces is now supported which allows
  to read string attributes written in python.
- Added corresponding tests
- Corrected other tests

--- a/test/libArrayToolbox/Makefile.am
+++ b/test/libArrayToolbox/Makefile.am
@@ -1,20 +1,24 @@
 TESTS = \
 	testATBLinAlg \
-	testArray
+	testArray \
+	testLocalSumFilter
 
 check_PROGRAMS = $(TESTS)
 
-AM_CPPFLAGS = -I$(top_srcdir)/src -DTOP_BUILD_DIR="\"$(shell (cd \$(top_builddir); pwd))\""
+AM_CPPFLAGS = -I$(top_srcdir)/src $(GSL_CFLAGS) $(HDF5_CFLAGS) \
+	-DTOP_BUILD_DIR="\"$(shell (cd \$(top_builddir); pwd))\""
 AM_CXXFLAGS = -Wno-long-long
 
 LDADD = $(top_builddir)/src/libArrayToolbox/libArrayToolbox.la \
 	$(top_builddir)/src/libBlitzFFTW/libBlitzFFTW.la \
 	$(top_builddir)/src/libBlitzHdf5/libBlitzHdf5.la \
 	$(top_builddir)/src/libProgressReporter/libProgressReporter.la \
-	$(top_builddir)/src/libBaseFunctions/libBaseFunctions.la
+	$(top_builddir)/src/libBaseFunctions/libBaseFunctions.la \
+	$(GSL_LIBS) $(HDF5_LIBS)
 
 noinst_HEADERS = lmbunit.hh
 
 testATBLinAlg_SOURCES = testATBLinAlg.cc
 testArray_SOURCES = testArray.cc
+testLocalSumFilter_SOURCES = testLocalSumFilter.cc
 
